Kube VIP and MetalLB vars added.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # CSVs of machine IP addresses
 IP_LIST=""
 
+# IP used for Kube-VIP
+KUBE_VIP=""
+
+# MetalLB IP addresses
+MLB=""
+
 # User of machine
 USER=""
 
